fixed Resume layout shift

--- a/src/style.css
+++ b/src/style.css
@@ -7,6 +7,11 @@
   src:local("IosevkaAile-Regular"), url('./assets/fonts/IosevkaAile/IosevkaAile-Regular.woff2');
 }
 
+@font-face {
+  font-family: OverusedGrotesk;
+  src: local("OverusedGrotesk-Roman"), url('./assets/fonts/OveerusedGrotesk/OverusedGroteskRoman-VF.woff2');
+}
+
 :root {
-  font-family: 'Iosevka Aile', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: OverusedGrotesk ,'Iosevka Aile', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
